Create interfaces for services. Move some private methods to appropriate services.